
[package]
authors = ["RedStone Team <dev@redstone.finance>"]
edition = "2021"
name    = "mars-rover"
version = "0.0.1"

metadata.cargo-machete = { ignored = ["napi-build"] }

[lib]
crate-type = ["cdylib"]
name       = "mars_rover"
path       = "src/rust/src/lib.rs"

[dependencies]
napi        = { version = "3.0.0", features = ["async"] }
napi-derive = "3.0.0"

anyhow     = "1.0"
base64     = "0.21"
bcs        = "0.1"
flate2     = { version = "1.1.2" }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
