
[package]
authors = ["RedStone Team <dev@redstone.finance>"]
edition = "2021"
name    = "mars-rover"
version = "0.0.1"

metadata.cargo-machete = { ignored = ["napi-build"] }

[lib]
crate-type = ["cdylib"]
name       = "mars_rover"
path       = "src/rust/src/lib.rs"

[dependencies]
napi        = { version = "3.3.0", features = ["async"] }
napi-derive = "3.2.5"

anyhow             = { version = "1.0.100" }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0.145"
sha2               = "0.10"
soroban-env-common = { version = "23.0.1", features = ["std", "serde"] }
soroban-env-host   = { version = "23.0.1", features = ["testutils", "backtrace"] }
soroban-test-wasms = { git = "https://github.com/stellar/rs-soroban-env/" }
serde_with = "3.14.1"


[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
